# MegaCppUniverse

./: CMakeLists.txt  README.md
00001/: CMakeLists.txt  Readme.md  main.cpp
00001/include/: stack.h
00001/src/: main.cpp
00002/: README.md
00002/include/: Collection.h  GenericContainer.h
00002/src/: GenericContainer.cpp  main.cpp
00003/: README.md
00003/include/: functions.h
00003/src/: main.c
00004/: Readme.md
00004/include/: MyClass.h
00004/src/: MyClass.cpp  main.cpp
00005/: CMakeLists.txt
00005/include/: book_manager.h
00005/src/: main.cpp
00006/include/: complex.h  shape.h  utility.h
00006/src/: complex.cpp  main.cpp  shape.cpp  utility.cpp
